[tool.commitizen]
version = "0.9.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]

[tool.poetry]
name = "traveller"
version = "0.9.0"
description = ""
authors = ["DiRaven"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
discord-py = ">=2.3.1"
aiohttp = ">=3.8.4"
beautifulsoup4 = ">=4.12.2"
alembic = ">=1.11.1"
sentry-sdk = ">=1.28.0"
commitizen = "^3.10.1"
pyright = "^1.1.344"


[tool.poetry.group.dev.dependencies]
isort = ">=5.12.0"
pre-commit = ">=3.3.3"
bandit = ">=1.7.5"
types-beautifulsoup4 = ">=4.12.0.5"
pyright = "^1.1.336"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
