[project]
dependencies = [
    "aiohttp",
    "alembic",
    "beautifulsoup4",
    "commitizen",
    "discord-py",
    "loguru",
    "pyright",
    "sentry-sdk",
]
optional-dependencies = { dev = [
    "bandit",
    "isort",
    "pre-commit",
    "pyright",
    "types-beautifulsoup4",
] }
name = "traveller"
version = "0.10.1"
requires-python = ">=3.12"
authors = [{ name = "Alex Pavlenko", email = "oleksa.pavlenko@gmail.com" }]
description = "Automation bot for ukrainian servers"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
urls.Homepage = "https://github.com/diraven/traveller"
urls.Issues = "https://github.com/diraven/traveller/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
version = "0.10.1"
tag_format = "v$version"
version_files = ["pyproject.toml:^version", "__init__.py"]

[tool.pyright]
include = ["src"]
ignore = ["src/platform/v1"]
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.12"
typeCheckingMode = "strict"
